--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 
-h1 {
+h1{
   text-align: center;
 }
 
@@ -24,7 +24,7 @@ figcaption {
 
 nav a {
   padding: 0 10px;
-  background-color: lightblue;
+  background-color: grey;
   margin: 0 auto;
 }
 
